src/app/common/components/SettingsPage.scss
/*
	componentPath: src/app/common/components/SettingsPage
	cssComponentId: settings-page_ejwkk
*/
@import '../../../common/styles/colors';

.settings-page_ejwkk > .setting + .setting {
	padding-top: 15px;
}
.settings-page_ejwkk > .setting > .header {
	display: flex;
	align-items: center;
}
.settings-page_ejwkk > .setting > .header > .label {
	font-family: 'Museo Sans (700)';
	font-size: 14pt;
}
.settings-page_ejwkk > .setting > .section {
	margin: 10px 0;
}
.settings-page_ejwkk > .setting > .section > label {
	font-family: 'Museo Sans (500)';
}
.settings-page_ejwkk > .setting > .section > .indicators {
	display: flex;
	align-items: center;
	margin-top: 2px;
}
.settings-page_ejwkk > .setting > .section > .indicators > .status {
	display: flex;
	align-items: center;
}
.settings-page_ejwkk > .setting > .section > .indicators > .status > .icon_rour3d {
	margin-right: 3px;
}
.settings-page_ejwkk > .accounts > .section > .account {
	max-width: 300px;
}
.settings-page_ejwkk > .accounts > .section > .account + .account {
	margin-top: 10px;
}
.settings-page_ejwkk > .accounts > .section > .account > .provider {
	font-family: 'Museo Sans (700)';
	margin-bottom: 5px;
}
.settings-page_ejwkk > .accounts > .section > .account > .date {
	margin-bottom: 5px;
}

@include theme using ($root, $scheme) {
	#{$root} .settings-page_ejwkk > .setting > .section > .indicators > .status.on {
		@include theme-colors(
			$scheme,
			(
				"color": $intent-success-color
			)
		);
	}
	#{$root} .settings-page_ejwkk > .setting > .section > .indicators > .status.warn {
		@include theme-colors(
			$scheme,
			(
				"color": $intent-warning-color
			)
		);
	}
}

